# AIS_SPR_4

./: .gitignore  PRD.md  README.md  config.yaml  progress.txt  pyproject.toml
api/: models.py  service.py
data/schemas/: arztbesuchsbestaetigung.json  lieferschein.json  reisekostenbeleg.json
demo/: Home.py  generate_metrics.py  utils.py
demo/.streamlit/: config.toml
demo/metrics/: classifier_metrics.json  ner_metrics.json
demo/pages/: 1_Live_Demo.py  2_Architecture.py  3_Models_and_Metrics.py  4_About.py  5_Tech_Stack.py  6_About.py
docs/: architecture.md  model_pipeline.md
docs/plans/: 2026-03-05-demo-website-design.md  2026-03-05-demo-website-redesign.md
edge_model/: __init__.py
edge_model/classification/: __init__.py  config.py  dataset.py  export_onnx.py  train.py  validate.py
edge_model/extraction/: __init__.py  config.py  dataset.py  export_onnx.py  labels.py  postprocess.py  train.py
edge_model/inference/: __init__.py  classifier_inference.py  config.py  extractor_inference.py  pipeline.py  preprocessor.py  validator.py
mobile_app/: README.md  __init__.py
mobile_app/src/: __init__.py  app.py  model_manager.py
ocr/: engine.py  postprocessing.py  preprocessing.py
results/: arztbesuch_example.json  lieferschein_example.json  reisekosten_example.json
scripts/: generate_samples.py  generate_text_samples.py
tests/: conftest.py
tests/e2e/: test_all_document_types.py  test_full_pipeline.py
tests/integration/: test_classification_pipeline.py  test_extraction_pipeline.py  test_ocr_engine.py
tests/unit/: test_classifier_dataset.py  (+17 more)
