[project]
name = "ais-spr4-edge-doc"
version = "0.1.0"
description = "Edge-AI Based Document Processing for BMD Go"
requires-python = ">=3.12,<3.13"
dependencies = [
    "onnxruntime>=1.17.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "pydantic>=2.5.0",
    "jsonschema>=4.20.0",
]

[dependency-groups]
train = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "transformers>=4.38.0",
    "timm>=0.9.12",
    "datasets>=2.17.0",
    "onnx>=1.15.0",
    "optimum[onnxruntime]>=1.17.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "faker>=40.5.1",
    "onnxscript>=0.6.2",
    "accelerate>=1.12.0",
]
ocr = [
    "rapidocr-onnxruntime>=1.3.0",
]
viz = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]
demo = [
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "transformers>=4.38.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"demo/Home.py" = ["N999"]
"demo/utils.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: requires ONNX models",
    "e2e: full pipeline test",
]
